# deepspeech

./: Makefile  README.md  requirements.txt
speech/: ctc.py  decoder.py  evaluate.py  evaluate_single.py  gdmnesterov.py  run_ds2.sh  sample_proposals_callback.py  train.py  utils.py
speech/data/: dataloader.py  ingest_librispeech.py
src/transforms/: .gitignore  Makefile
src/transforms/warp-ctc/: CMakeLists.txt  README.md
src/transforms/warp-ctc/examples/: loader.py  rnnctc.py  simple.py
src/transforms/warp-ctc/include/: ctc.h
src/transforms/warp-ctc/include/detail/: gpu_ctc.h
src/transforms/warp-ctc/python/: __init__.py  ctc.py  setup.py
src/transforms/warp-ctc/src/: ctc_entrypoint.cpp
src/transforms/warp-ctc/tests/: test_gpu.cu
